gitops/apps/unifi-network-application/deployment-mongo.yaml
---
# MongoDB Deployment (Bitnami container)
apiVersion: apps/v1
kind: Deployment
metadata:
  name: unifi-db
  namespace: unifi-network-application
spec:
  replicas: 1
  selector:
    matchLabels:
      app: unifi-db
  template:
    metadata:
      labels:
        app: unifi-db
    spec:
      containers:
        - name: mongo
          image: bitnami/mongodb:4.4.10
          imagePullPolicy: IfNotPresent
          securityContext:
            runAsUser: 0
            runAsGroup: 0
            privileged: true
          volumeMounts:
            - name: mongo-data
              mountPath: /bitnami/mongodb
            - name: mongo-init-scripts
              mountPath: /docker-entrypoint-initdb.d
              readOnly: true

      volumes:
        - name: mongo-data
          persistentVolumeClaim:
            claimName: mongo-data
        - name: mongo-init-scripts
          configMap:
            name: mongo-init-grant
            items:
              - key: zzz-grant-unifi-stat.sh
                path: zzz-grant-unifi-stat.sh
