gitops/apps/unifi-network-application/deployment-unifi-controller.yaml
---
# UniFi Controller Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: unifi-controller
  namespace: unifi-network-application
spec:
  replicas: 1
  selector:
    matchLabels:
      app: unifi-controller
  template:
    metadata:
      labels:
        app: unifi-controller
    spec:
      containers:
        - name: unifi-controller
          image: lscr.io/linuxserver/unifi-network-application:8.6.9
          imagePullPolicy: Always
          securityContext:
            runAsUser: 0
            runAsGroup: 0
            privileged: true
          ports:
            - name: unifi-discovery
              containerPort: 10001
              protocol: UDP
            - name: stun
              containerPort: 3478
              protocol: UDP
            - name: syslog
              containerPort: 5514
              protocol: UDP
            - name: https-ui
              containerPort: 8843
              protocol: TCP
            - name: api
              containerPort: 8443
              protocol: TCP
            - name: http-portal
              containerPort: 8880
              protocol: TCP
            - name: controller
              containerPort: 8080
              protocol: TCP
            - name: speed-test
              containerPort: 6789
              protocol: TCP

          volumeMounts:
            - name: unifi-data
              mountPath: /config

      volumes:
        - name: unifi-data
          persistentVolumeClaim:
            claimName: unifi-data
